--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -18,13 +18,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install semgrep
-        run: |
-          python3 -m pip install semgrep
-
       - name: Run semgrep
         run: |
-          semgrep ci --config rules --sarif --sarif-output=semgrep.sarif src
+          semgrep ci --config rules --sarif --sarif-output=semgrep.sarif --subdir=src
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
