--- a/rules/structured-log.yml
+++ b/rules/structured-log.yml
@@ -15,7 +15,7 @@ rules:
         pattern: $STRING
   message: "Prefer structured logging with additional arguments"
   languages: [ruby]
-  severity: WARNING
+  severity: INFO
   metadata:
     category: institutional-patterns
     technology: rails
