--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Run semgrep
         run: |
-          semgrep ci --config rules --sarif --sarif-output=semgrep.sarif --subdir=src || 1
+          semgrep ci --config rules --sarif --sarif-output=semgrep.sarif --subdir=src || true
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
